# simulink_models

./: CMakeLists.txt  README.md  SetupConstants.m  Startup.m  package.xml  startup.m
AlexStuff/: Alex_SERGIO_shoulderelbow.mdl  Alex_SERGIO_wrist.mdl  Alex_SERGIO_wrist.slx  Alex_SERGIOarm_extra_blocks.mdl  Alex_armPlanar.m  Alex_conFun.m  Alex_detT.m  Alex_init_const_shoulderelbow.m  Alex_init_const_wrist.m
Models/: sergio_arm.mdl
Start/: Startup.m
StartWindows/: Startup.m
Utils/: HiddenHandle.m  TUe.m
