<?xml version="1.0"?>
<package>
  <name>simulink_models</name>
  <version>0.0.0</version>
  <description>The package containing simulink models, functions and mfiles </description>
  <maintainer email="m.j.j.baeten@gmail.com">Max Baeten</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tue_simulink_ethercat</run_depend>
  <run_depend>tue_ethercat_drivers</run_depend>
  <run_depend>soem_beckhoff_drivers</run_depend>
  <run_depend>soem_master</run_depend>

</package>
