<?xml version="1.0"?>
<package>
  <name>simulink_models</name>
  <version>0.0.0</version>
  <description>The package containing simulink models, functions and mfiles </description>
  <maintainer email="m.j.j.baeten@gmail.com">Max Baeten</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
